DSND-3119: Change processing of delete delta (#85)
* DSND-3119: Implement delete happy path

* Repository call now happens before chs kafka api invocation.
* If chs kafka api is down, document is still deleted.

* DSND-3119: Update POM

* Update deps in pom.
* Add 'clean' before tests are run in 'make test' command.

* DSND-3119: Implement delete logic

* Change DELETE URI to include officer type.
* Refactor extract delete logic into its own service.

* DSND-3119: Add check for request type vs document type

* Added a check to make sure the request officer type was the same as the mongo doc's officer type. E.g., throw a bad request if the request type is NATURAL but document type is CORPORATE.

* DSND-3119: Refactor delete request params into object

* DSND-3119: Refactor based on some sonar lint suggestions

* DSND-3119: Upgrade private sdk version

* DSND-3119: Add explicit stubbing to unit tests

* Explicitly stub the isCorporateOfficer boolean for natural officers (this field is false by default).

* DSND-3119: Revert upsert service isLatestRecord method

* This service needs a refactor, but testing the upsert flow is out of the cope of this ticket. When we have automated regression tests, that will be a more appropriate time to refactor.

* DSND-3119: Refactor delta at in upsert service

* Changing my mind from the previous commit. Testers can manually smoke test delta at logic for upserts as part of this ticket.